--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -5,7 +5,6 @@
   background-repeat: no-repeat;
   background-position: 0 0;
   width: 320px;
-  margin: 0 auto;
 }
 
 
@@ -79,4 +78,8 @@
 
 .catalog__button {
   opacity: 0.2;
+}
+
+.catalog__video {
+  margin: 0 auto;
 }
