--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -1,8 +1,9 @@
 .video {
-  margin: 0 auto;
   width: 260px;
   border: solid 1px #ececec;
   position: relative;
+  z-index: 1;
+
 }
 
 .video__heading {
