--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -36,3 +36,8 @@
 @import "blocks/form-main.scss";
 
 
+/*below is the universal*/
+
+@import "blocks/modal.scss";
+
+@import "blocks/container.scss";
