--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,5 +1,5 @@
 .page-main {
-  font-family: OpenSans, Arial, Helvetica, sans-serif;
+  font-family: "OpenSans", "Arial", "Helvetica", sans-serif;
   background-image: url("../img/hero-mobile@3x.png");
   background-size: contain;
   background-repeat: no-repeat;
@@ -14,7 +14,6 @@
   background-repeat: no-repeat;
   background-position: top center;
   width: 320px;
-
 }
 
 .page-main__header {
