--- a/source/sass/blocks/form-main.scss
+++ b/source/sass/blocks/form-main.scss
@@ -1,5 +1,5 @@
 .form-main {
-  font-family: OpenSans, Arial, Helvetica, sans-serif;
+  font-family: "OpenSans", "Arial", "Helvetica", sans-serif;
   width: 320px;
 }
 
@@ -67,7 +67,7 @@
   line-height: 1.06;
   letter-spacing: normal;
   text-align: left;
-  color:#000000;
+  color: #000000;
   padding-bottom: 25px;
 }
 
@@ -79,8 +79,6 @@
 .form-main__item--toy {
   padding-left: 62px;
 }
-
-
 
 .form-main__label {
   position: relative;
@@ -130,6 +128,7 @@
   text-align: left;
   color: #000000;
   padding-bottom: 45px;
+  position: relative;
 }
 
 .form-main__item--chbx {
@@ -137,13 +136,8 @@
   padding-left: 64px;
 }
 
-
-.form-main__label-chbx {
-  position: relative;
-}
-
 .form-main__input + .form-main__label-chbx::before {
-  content:"";
+  content: "";
   position: absolute;
   top: -13px;
   left: -63px;
@@ -161,14 +155,14 @@
 }
 
 .form-main__item input:checked + .form-main__label-chbx::after {
-  content:"";
+  content: "";
   position: absolute;
   width: 15px;
   height: 5px;
   border-bottom: 2px solid black;
   border-left: 2px solid black;
   transform: rotate(-45deg);
-  top: 0px;
+  top: 0;
   left: -50px;
 }
 
@@ -197,8 +191,8 @@
   letter-spacing: normal;
   text-align: left;
   color: rgba(68, 68, 68, 0.3);
-  margin: 0px;
-  padding: 18px 0px;
+  margin: 0;
+  padding: 18px 0;
   margin-bottom: 24px;
 }
 
@@ -213,7 +207,7 @@
   left: 222px;
   width: 25px;
   height: 24px;
-  background-image: url(../img/icon-phone.svg);
+  background-image: url("../img/icon-phone.svg");
   background-repeat: no-repeat;
   opacity: 0.2;
 }
@@ -229,7 +223,7 @@
   left: 222px;
   width: 32px;
   height: 27px;
-  background-image: url(../img/icon-mail.svg);
+  background-image: url("../img/icon-mail.svg");
   background-repeat: no-repeat;
   opacity: 0.2;
 }
