--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -47,3 +47,27 @@
   color: #ffffff;
   opacity: 0.2;
 }
+
+@media (min-width: 768px) {
+  .main-nav__list {
+    display: flex;
+  }
+  .main-nav{
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .main-nav__item--search {
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+
+  .main-nav__item--search::before {
+   left: 35px;
+  }
+}
+
+@media (min-width: 1050px) {
+
+}
