--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,3 +1,11 @@
+.modal {
+  width: 320px;
+  font-family: "OpenSans", "Arial", "Helvetica", sans-serif;
+  display: block;
+  justify-content: space-between;
+  background-color: #ffffff;
+}
+
 .modal__header {
   background-color: #ffffff;
   width: 136px;
