--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -28,14 +28,15 @@
     border: solid 1px #ececec;
   }
 
-  .site-list__item {
-  }
+  // .site-list__item {
+  // }
+
   .site-list__item--catalog,
   .site-list__item--form {
     display: none;
   }
 }
 
-@media (min-width: 1050px) {
+// @media (min-width: 1050px) {
 
-}
+// }
