--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -52,7 +52,8 @@
   .main-nav__list {
     display: flex;
   }
-  .main-nav{
+
+  .main-nav {
     display: flex;
     flex-wrap: wrap;
   }
@@ -64,10 +65,10 @@
   }
 
   .main-nav__item--search::before {
-   left: 35px;
+    left: 35px;
   }
 }
 
-@media (min-width: 1050px) {
+// @media (min-width: 1050px) {
 
-}
+// }
