--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -11,21 +11,22 @@
   letter-spacing: normal;
   text-align: left;
   color: #000000;
-  padding-left: 31px;
-  padding-top: 76px;
+  padding-left: 28px;
+  padding-top: 48px;
   position: relative;
 }
 
 .about__header::before {
   content: "";
   position: absolute;
-  top: 34px;
+  top: 16px;
   left: 0;
   width: 320px;
   height: 6px;
   display: block;
   background-image: url("../img/bkgd/zigzag-line-desktop-svg.svg");
   background-size: 320px 6px;
+  transform: rotate(180deg);
 }
 
 .about__list {
@@ -43,15 +44,16 @@
   letter-spacing: normal;
   text-align: left;
   color: #000000;
-  padding-top: 85px;
+  padding-top: 66px;
+  padding-bottom: 17px;
   position: relative;
 }
 
 .about__item::before {
   content: "";
   position: absolute;
-  top: 30px;
-  left: 10px;
+  top: 11px;
+  left: 8px;
   background-repeat: no-repeat;
   background-position: 0 0;
 }
@@ -64,6 +66,8 @@
 
 
 .about__item--price::before {
+  top: 12px;
+  left: 0;
   width: 47px;
   height: 27px;
   background-image: url("../img/icon-feature-money.svg");
@@ -72,29 +76,37 @@
 .about__item--heart::before {
   width: 34px;
   height: 30px;
+  top: 17px;
   background-image: url("../img/icon-feature-heart.svg");
 }
 
 .about__item--ball::before {
   width: 35px;
   height: 34px;
+  left: 3px;
+  top: 14px;
   background-image: url("../img/icon-feature-ball.svg");
 }
 
 .about__item--rocket::before {
   width: 55px;
   height: 23px;
+  left: -6px;
+  top: 15px;
   background-image: url("../img/icon-feature-rocket.svg");
 }
 
 .about__item--gift::before {
   width: 33px;
   height: 32px;
+  top: 13px;
+  left: 3px;
   background-image: url("../img/icon-feature-gift.svg");
 }
 
 .about__review {
-  padding-left: 30px;
+  padding-left: 29px;
+  padding-top: 16px;
 }
 
 .about__text {
@@ -108,6 +120,8 @@
   color: #444444;
   margin: 0;
   padding-left: 30px;
+  padding-right: 26px;
+  padding-top: 2px;
 }
 
 .about__author {
@@ -121,21 +135,38 @@
   text-align: left;
   color: #000000;
   padding-left: 30px;
-  padding-top: 40px;
+  padding-top: 28px;
 }
 
 .about__email {
   display: block;
   text-decoration: none;
   padding-left: 30px;
-  padding-top: 10px;
+  padding-top: 7px;
   color: #444444;
 }
 
 .about__slider {
-  padding-left: 30px;
-  padding-top: 36px;
+  padding-left: 28px;
+  padding-top: 33px;
   display: flex;
+}
+
+.about__send {
+  font-size: 18px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.11;
+  letter-spacing: normal;
+  text-align: center;
+  color: #444444;
+  background-color: #ffffff;
+  border: solid 2px #444444;
+  padding: 14px 78px 15px 78px;
+  text-transform: uppercase;
+  margin-left: 30px;
+  margin-top: 38px;
 }
 
 .about__button--prev {
@@ -160,4 +191,200 @@
   height: 52px;
   padding: 13px 42px 13px 38px;
   background-position: center;
+}
+
+@media (min-width: 768px) {
+  .about__item--price::before {
+    left: 1px;
+  }
+
+  .about__send {
+    position: absolute;
+    top: -88px;
+    left: 543px;
+    margin: 0;
+    padding-left: 38px;
+    padding-right: 38px;
+    padding-bottom: 14px;
+    font-size: 17px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.18;
+    letter-spacing: normal;
+    text-align: center;
+  }
+
+  .about__button--next {
+    padding-left: 51px;
+  }
+
+  .about__button {
+    border: 0;
+    width: 51px;
+    height: 26px;
+  }
+
+  .about__slider {
+    padding-left: 547px;
+    margin-top: -72px;
+  }
+
+  .about__email {
+    padding-left: 50px;
+    letter-spacing: normal;
+  }
+
+  .about__author {
+    padding-left: 50px;
+    padding-top: 56px;
+    font-size: 18px;
+  }
+
+  .about__text {
+    font-size: 17px;
+    padding-top: 7px;
+    padding-left: 49px;
+    line-height: 1.83;
+    padding-right: 33px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    letter-spacing: normal;
+    text-align: left;
+  }
+
+  .about__review {
+    font-size: 43px;
+    padding-left: 45px;
+    padding-top: 73px;
+  }
+
+  .about__wrapper {
+    position: relative;
+  }
+
+  .about__wrapper::before {
+    position: absolute;
+    content: "";
+    width: 350px;
+    height: 457px;
+    background-image: url("../img/review@1x.jpg");
+    background-repeat: no-repeat;
+    top: -167px;
+    z-index: -5;
+    //background-size: 100px 100px;
+  }
+
+  .about__header {
+    font-size: 43px;
+    padding-left: 46px;
+    padding-top: 81px;
+  }
+
+  .about__item {
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+    padding-top: 63px;
+    padding-bottom: 46px;
+    padding-right: 10px;
+  }
+
+  .about__header::before {
+    content: "";
+    position: absolute;
+    top: 16px;
+    left: -1px;
+    width: 768px;
+    height: 15px;
+    display: block;
+    background-image: url("../img/bkgd/zigzag-line-desktop-svg.svg");
+    background-repeat: no-repeat;
+    background-size: 768px 15px;
+    transform: rotate(180deg);
+    background-position: 0 0;
+  }
+
+  .about {
+    width: 100%;
+  }
+
+  .about__list {
+    // display: flex;
+    // flex-direction: column;
+    // flex-wrap: wrap;
+    display: block;
+    column-count: 2;
+    padding-left: 51px;
+    padding-top: 3px;
+    padding-right: 68px;
+  }
+}
+
+@media (min-width: 1150px) {
+  .about__slider {
+    padding-left: 929px;
+    margin-top: -71px;
+  }
+
+  .about__email {
+    padding-left: 225px;
+    letter-spacing: normal;
+    font-size: 17px;
+  }
+
+  .about__author {
+    padding-left: 225px;
+    padding-top: 37px;
+    font-size: 17px;
+  }
+
+  .about__send {
+    top: -56px;
+    left: 925px;
+  }
+
+  .about__text {
+    padding-top: 40px;
+    padding-left: 225px;
+    padding-right: 155px;
+  }
+
+  .about__wrapper::before {
+    top: -135px;
+    left: 50px;
+  }
+
+  .about__review {
+    font-size: 53px;
+    padding-left: 221px;
+    padding-top: 62px;
+    margin-bottom: 0;
+  }
+
+  .about__item {
+    width: 293px;
+  }
+
+  .about__list {
+    padding-top: 19px;
+    padding-left: 225px;
+    padding-right: 241px;
+  }
+
+  .about__header::before {
+    top: 30px;
+    left: 49px;
+    width: 1050px;
+    height: 22px;
+    background-size: 1050px 22px;
+  }
+
+  .about__header {
+    font-size: 52px;
+    padding-left: 221px;
+    padding-top: 110px;
+    margin-bottom: 0;
+  }
 }
