--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -11,7 +11,7 @@
   border: solid 1px #ececec;
   width: 260px;
   margin: 0 auto;
-  margin-bottom: 30px;
+  margin-bottom: 26px;
 }
 
 .catalog__link {
@@ -29,15 +29,16 @@
   color: #000000;
   padding-left: 28px;
   margin: 0;
-  margin-top: 31px;
-  margin-bottom: 17px;
+  margin-top: 22px;
+  padding-right: 26px;
 }
 
 .catalog__discription {
   padding-left: 28px;
   color: #444444;
   margin: 0;
-  margin-bottom: 55px;
+  font-size: 13px;
+  padding-top: 12px;
 }
 
 .catalog__wrapper {
@@ -48,6 +49,7 @@
   align-items: center;
   margin-bottom: 30px;
   position: relative;
+  justify-content: space-between;
 }
 
 .catalog__wrapper::before {
@@ -64,7 +66,6 @@
   margin: 0;
   font-weight: bold;
   padding-left: 28px;
-  padding-right: 111px;
   font-size: 15px;
   font-stretch: normal;
   font-style: normal;
@@ -72,12 +73,219 @@
   letter-spacing: normal;
   text-align: left;
   color: #000000;
+  padding-top: 47px;
 }
 
 .catalog__button {
+  display: block;
   opacity: 0.2;
+  padding-top: 48px;
+  padding-left: 1px;
+  padding-right: 27px;
 }
 
 .catalog__video {
   margin: 0 auto;
 }
+
+.catalog__header {
+  font-size: 27px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.11;
+  letter-spacing: normal;
+  text-align: center;
+  color: #000000;
+  margin: 0;
+  background-color: #f1f1f1;
+  margin-bottom: 30px;
+  padding-top: 71px;
+  padding-bottom: 77px;
+  padding-left: 39px;
+}
+
+@media (min-width: 768px) {
+  .catalog__video {
+    margin-top: 51px;
+    margin-bottom: 60px;
+  }
+
+  .catalog__wrapper::before {
+    top: 179px;
+    width: 272px;
+  }
+
+  .catalog__wrapper {
+    margin-bottom: 23px;
+    align-items: flex-end;
+  }
+
+  .catalog__info--wrap {
+    border: solid 1px #ececec;
+    margin-top: 49px;
+  }
+
+  // .catalog__button {
+
+  // }
+
+  .catalog__discription {
+    font-size: 15px;
+  }
+
+  .catalog__price {
+    font-size: 17px;
+    padding-top: 201px;
+    padding-left: 31px;
+    //padding-right: 165px;
+    width: 249px;
+  }
+
+  .catalog__price--toys {
+    padding-top: 175px;
+  }
+
+  .catalog__heading {
+    margin: 0;
+    padding-top: 25px;
+    padding-left: 26px;
+    font-size: 20px;
+    max-width: 230px;
+    line-height: 1.2;
+  }
+
+  .catalog__img {
+    display: block;
+    padding-left: 50px;
+    padding-top: 49px;
+    width: 334px;
+  }
+
+  .catalog__item {
+    border: 0;
+    display: flex;
+    width: auto;
+    margin-bottom: 6px;
+  }
+
+  .catalog__header::after {
+    content: "";
+    position: absolute;
+    width: 768px;
+    height: 24px;
+    background-image: url("../img/bkgd/zigzag-fill-desktop-svg.svg");
+    background-position: 0 0;
+    top: 212px;
+    left: 0;
+    background-size: 768px 24px;
+    background-repeat: no-repeat;
+  }
+
+  .catalog__header {
+    position: relative;
+    font-size: 43px;
+    padding-left: 0;
+    padding-top: 95px;
+    padding-bottom: 81px;
+    z-index: -5;
+  }
+
+  .catalog {
+    width: 100%;
+  }
+}
+
+@media (min-width: 1150px) {
+  .catalog__video {
+    border: solid 1px #ececec;
+    margin-left: 49px;
+    margin-top: 58px;
+  }
+
+  .catalog__button--toys {
+    padding-top: 41px;
+    padding-right: 31px;
+  }
+
+  .catalog__wrapper::before {
+    top: 41px;
+    width: 254px;
+  }
+
+  .catalog__wrapper--toys::before {
+    top: 25px;
+  }
+
+  .catalog__heading {
+    padding-left: 25px;
+    padding-right: 59px;
+  }
+
+  .catalog__price {
+    width: 100%;
+    padding-top: 62px;
+    padding-left: 27px;
+    // position: relative;
+  }
+
+  // .catalog__price::before {
+  //   content: "";
+  //   position: absolute;
+  //   width: 272px;
+  //   height: 1px;
+  //   background-color: #ececec;
+  //   top: 10px;
+  //   left: 10px;
+  // }
+
+  .catalog__price--toys {
+    padding-left: 26px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .catalog__products {
+    display: flex;
+    padding-top: 98px;
+    padding-left: 49px;
+  }
+
+  .catalog__img {
+    width: 316px;
+    padding: 0;
+  }
+
+  .catalog__link {
+    margin: 0 auto;
+  }
+
+  .catalog__info--wrap {
+    margin: 0 auto;
+    width: calc(100% - 2px);
+  }
+
+  .catalog__item {
+    margin: 0;
+    flex-direction: column;
+    padding-right: 51px;
+  }
+
+  .catalog__header {
+    font-size: 53px;
+    padding-top: 95px;
+    padding-bottom: 100px;
+  }
+
+  .catalog__header::after {
+    width: 1150px;
+    height: 24px;
+    background-size: 1150px 34px;
+    top: 236px;
+  }
+}
+
+/**
+13% 2600 ндфл
+30% (22%пфр+5,1%мед+
+2,9%несчастный случай+0,2%материнство)**/
