--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,14 +2,21 @@
   margin: 0 auto;
   padding: 0;
   position: relative;
-  padding-top: 95px;
-  padding-left: 30px;
+  padding-top: 86px;
+  padding-left: 28px;
+  font-size: 18px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.67;
+  letter-spacing: normal;
+  text-align: left;
 }
 
 .contacts__header::before {
   content: "";
   position: absolute;
-  top: 34px;
+  top: 45px;
   left: 0;
   width: 320px;
   height: 6px;
@@ -27,17 +34,24 @@
   font-size: 15px;
   line-height: 2;
   color: #444444;
+  margin-top: 26px;
 }
 
 .contacts__char {
   padding-left: 30px;
-  padding-bottom: 46px;
+  padding-bottom: 30px;
 }
 
 .contacts__value {
   padding-left: 32px;
   width: 178px;
-  padding-bottom: 42px;
+  padding-bottom: 30px;
+}
+
+.contacts__value--address {
+  width: 145px;
+  padding-right: 10px;
+  padding-bottom: 37px;
 }
 
 .contacts__email {
@@ -51,7 +65,6 @@
   margin: 0 auto;
   position: relative;
   z-index: 1;
-  padding-bottom: 58px;
 }
 
 .contacts__map {
@@ -61,7 +74,7 @@
 .contacts__map::before {
   content: "";
   position: absolute;
-  top: 142px;
+  top: 145px;
   left: 138px;
   width: 67px;
   height: 100px;
@@ -72,6 +85,7 @@
 }
 
 .contacts__button {
+  display: block;
   text-decoration: none;
   color: #444444;
   background-color: #ffffff;
@@ -80,9 +94,11 @@
   line-height: 1.11;
   font-size: 18px;
   font-weight: bold;
-  padding: 19px 52px;
-  margin: auto;
+  padding: 14px 30px 15px 49px;
+  margin: 0;
   margin-left: 30px;
+  margin-top: 34px;
+  margin-right: 30px;
 }
 
 .contacts__socials {
@@ -98,12 +114,194 @@
 }
 
 .contacts__item {
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 56px;
+  padding-top: 2px;
+  padding-left: 18px;
+  padding-right: 23px;
+  padding-bottom: 20px;
 }
 
 .contacts__icon {
   justify-content: center;
   align-items: center;
+}
+
+.contacts__img--tablet,
+.contacts__img--desktop {
+  display: none;
+}
+
+.contacts__logo {
+  display: none;
+}
+
+
+@media (min-width: 768px) {
+  .contacts__logo {
+    display: block;
+  }
+
+  .contacts__link {
+    padding-left: 50px;
+    padding-top: 50px;
+  }
+
+  .contacts__wrapper {
+    display: flex;
+    justify-content: space-between;
+    background-color: #f1f1f1;
+    margin-top: 57px;
+    padding-bottom: 30px;
+  }
+
+  .contacts__socials {
+    margin: 0;
+    padding: 0;
+    background-color: none;
+    padding-top: 57px;
+    padding-left: 92px;
+  }
+
+  .contacts__button {
+    padding: 15px 30px 13px 27px;
+    margin: 55px 269px 10px 269px;
+    font-size: 17px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.18;
+    letter-spacing: normal;
+    text-align: center;
+  }
+
+  .contacts__map::before {
+    top: 157px;
+    left: 363px;
+  }
+
+  .contacts__img {
+    display: none;
+  }
+
+  .contacts__img--tablet {
+    display: block;
+    padding-top: 18px;
+  }
+
+  .contacts__email {
+    padding-bottom: 3px;
+  }
+
+  .contacts__value {
+    padding-left: 23px;
+    padding-right: 50px;
+  }
+
+  .contacts__value--address {
+    padding-right: 10px;
+    width: 220px;
+    line-height: 1.83;
+  }
+
+  .contacts__list {
+    font-size: 17px;
+    width: auto;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    padding-left: 20px;
+    padding-top: 48px;
+  }
+
+  .contacts__header::after {
+    content: "";
+    position: absolute;
+    width: 47px;
+    height: 81px;
+    background-image: url("../img/icon-flag.svg");
+    background-repeat: no-repeat;
+    top: 193px;
+    left: 668px;
+  }
+
+  .contacts__header::before {
+    content: "";
+    position: absolute;
+    top: 131px;
+    width: 768px;
+    height: 15px;
+    display: block;
+    background-image: url("../img/bkgd/zigzag-line-desktop-svg.svg");
+    background-repeat: no-repeat;
+    background-size: 768px 15px;
+    transform: rotate(180deg);
+    background-position: 0 0;
+  }
+
+  .contacts__header {
+    font-size: 43px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.16;
+    letter-spacing: normal;
+    text-align: left;
+    padding-top: 208px;
+    padding-left: 46px;
+  }
+}
+
+@media (min-width: 1150px) {
+  .contacts__wrapper {
+    margin-top: 105px;
+  }
+
+  .contacts__map::before {
+    top: 146px;
+    left: 813px;
+  }
+
+  .contacts__button {
+    margin: -52px 695px 10px 225px;
+  }
+
+  .contacts__img {
+    display: none;
+  }
+
+  .contacts__img--desktop {
+    display: block;
+    padding-left: 522px;
+  }
+
+  .contacts__char,
+  .contacts__value {
+    padding-bottom: 26px;
+  }
+
+  .contacts__list {
+    padding-left: 194px;
+    padding-top: 45px;
+    padding-right: 540px;
+    margin-bottom: -353px;
+  }
+
+  .contacts__header::after {
+    top: 334px;
+    left: 113px;
+  }
+
+  .contacts__header {
+    padding-top: 341px;
+    padding-left: 221px;
+    font-size: 52px;
+  }
+
+  .contacts__header::before {
+    top: 178px;
+    left: 49px;
+    width: 1050px;
+    height: 22px;
+    background-size: 1050px 22px;
+  }
 }
