--- a/source/sass/blocks/develop.scss
+++ b/source/sass/blocks/develop.scss
@@ -9,19 +9,45 @@
 .develop__title {
   font-style: normal;
   margin: 0;
-  font-size: 20px;
+  font-size: 19px;
   line-height: 0.95;
   font-weight: bold;
   padding-right: 30px;
   position: relative;
+  padding-top: 14px;
+  font-stretch: normal;
 }
 
 .develop__title::before {
   content: "";
   position: absolute;
-  top: -28px;
+  top: 1px;
   left: -38px;
   background-color: #ececec;
   width: 260px;
   height: 1px;
+}
+
+.develop__picture {
+  padding-top: 24px;
+}
+
+@media (min-width: 768px) {
+  .develop {
+    //display: inline-block;
+    margin: 0;
+    padding: 0;
+    margin-left: 10px;
+    padding-right: 50px;
+    padding-top: 20px;
+  }
+
+  .develop__title {
+    padding-right: 19px;
+    padding-top: 13px;
+  }
+
+  .develop__link {
+    padding-left: 10px;
+  }
 }
