--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -3,9 +3,9 @@
 }
 
 .offer__name {
-  padding-left: 33px;
+  padding-left: 30px;
   margin: 0 auto;
-  padding-top: 34px;
+  padding-top: 28px;
   font-size: 25px;
   line-height: 1.2;
   color: #000000;
@@ -18,8 +18,9 @@
   font-size: 17px;
   line-height: 1.18;
   font-weight: bold;
-  padding-left: 33px;
-  padding-top: 8px;
+  padding-left: 29px;
+  display: block;
+  padding-top: 5px;
 }
 
 .offer__discrip {
@@ -27,8 +28,8 @@
   font-size: 15px;
   line-height: 1.6;
   font-weight: normal;
-  padding-left: 31px;
-  padding-top: 30px;
+  padding-left: 30px;
+  padding-top: 7px;
   padding-right: 41px;
 }
 
@@ -41,13 +42,21 @@
 }
 
 .offer__char {
-  padding: 15px;
+  padding-left: 28px;
+  padding-top: 10px;
+  padding-bottom: 8px;
+}
+
+.offer__value {
+  padding-left: 26px;
+  padding-top: 3px;
 }
 
 .offer__image {
   margin: auto;
   align-items: center;
   padding-left: 30px;
+  padding-top: 29px;
 }
 
 .offer__price {
@@ -62,9 +71,13 @@
   text-align: center;
   color: #444444;
   //padding-bottom: 48px;
+  display: inline-block;
+  margin-left: 97px;
+  margin-top: 19px;
 }
 
 .offer__button {
+  //display: inline-block;
   text-decoration: none;
   color: #444444;
   background-color: #ffffff;
@@ -73,7 +86,144 @@
   line-height: 1.18;
   font-size: 17px;
   font-weight: bold;
-  padding: 20px 84px;
+  padding: 15px 83px 13px 83px;
   margin: auto;
   margin-left: 30px;
+  margin-top: 27px;
+  display: inline-block;
+}
+
+.offer__image--desktop {
+  display: none;
+}
+
+.offer__image--tablet {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .offer__button {
+    margin-left: 48px;
+    margin-top: 34px;
+    padding-left: 99px;
+    padding-right: 100px;
+  }
+
+  .offer__image {
+    display: none;
+  }
+
+  .offer__image--tablet {
+    display: block;
+    padding: 57px 0 0 3px;
+  }
+
+  .offer__list {
+    padding: 19px 0 0 20px;
+  }
+
+  .offer__discrip {
+    font-size: 17px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.76;
+    letter-spacing: normal;
+    text-align: left;
+    padding: 32px 0 0 49px;
+  }
+
+  .offer__legend {
+    padding-top: 57px;
+    padding-left: 130px;
+    width: 100px;
+    text-align: center;
+    font-size: 17px;
+    line-height: 1;
+  }
+
+  .offer__wrapper {
+    display: flex;
+  }
+
+  .offer__name {
+    margin: 0;
+    font-size: 43px;
+    padding-top: 45px;
+    padding-left: 47px;
+  }
+
+  .offer {
+    width: 768px;
+  }
+
+  .offer__package {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .offer__wrapper-price {
+    display: flex;
+    flex-direction: column;
+    margin-top: -130px;
+  }
+
+  .offer__price {
+    font-size: 20px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.2;
+    letter-spacing: normal;
+    text-align: center;
+    padding-left: 23px;
+    padding-top: 1px;
+  }
+}
+
+@media (min-width: 1150px) {
+  .offer__button {
+    margin-left: 225px;
+  }
+
+  .offer__price {
+    padding-left: 201px;
+  }
+
+  .offer__list {
+    padding: 30px 0 0 195px;
+  }
+
+  .offer__discrip {
+    padding: 29px 0 0 225px;
+  }
+
+  .offer__image {
+    display: none;
+  }
+
+  .offer__image--desktop {
+    display: block;
+    margin-top: -142px;
+    padding-left: 69px;
+    z-index: -5;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .offer {
+    width: 100%;
+  }
+
+  .offer__legend {
+    padding-left: 82px;
+    padding-top: 139px;
+  }
+
+  .offer__name {
+    font-size: 53px;
+    padding-left: 37px;
+    padding-top: 122px;
+    order: 2;
+  }
 }
