--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,6 +1,5 @@
 .page-main {
   font-family: "OpenSans", "Arial", "Helvetica", sans-serif;
-  background-image: url("../img/hero-mobile@3x.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -10,7 +9,7 @@
 .page-main__wrapper {
   background-image: url("../img/hero-mobile@1x.jpg");
   background-color: #f0f0f0;
-  background-size: auto 373px;
+  background-size: 168%;
   background-repeat: no-repeat;
   background-position: top center;
   width: 320px;
@@ -28,4 +27,33 @@
   padding-right: 39px;
   padding-bottom: 140px;
   margin: 0;
+}
+
+
+@media (min-width: 768px) {
+  .page-main {
+    z-index: -10;
+  }
+
+  .page-main__wrapper {
+    background-image: url("../img/hero-tablet@1x.jpg");
+    background-color: #f0f0f0;
+    background-size: 149%;
+    background-repeat: no-repeat;
+    background-position: top center;
+    width: 768px;
+    position: relative;
+  }
+}
+
+@media (min-width: 1150px) {
+  .page-main__wrapper {
+    width: 100%;
+    background-image: url("../img/hero-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: top center;
+    position: relative;
+    background-color: #f0f0f0;
+    background-size: 100%;
+  }
 }
