--- a/source/sass/blocks/form-main.scss
+++ b/source/sass/blocks/form-main.scss
@@ -341,7 +341,7 @@
   margin-bottom: 16px;
 }
 
-.form-main__color-names {
+.form-main__input--colors {
   width: 150px;
 }
 
@@ -489,13 +489,9 @@
   }
 
   .form-main__list--color {
-    margin-left: 90px;
-    margin-top: 64px;
+    margin-left: 185px;
+    margin-top: -63px;
     margin-bottom: 11px;
-  }
-
-  .form-main__wrap {
-    display: flex;
   }
 
   .form-main__item--chbx {
@@ -521,6 +517,8 @@
     background-color: #f1f1f1;
     border: 0;
     margin: 0;
+    padding-top: 45px;
+    margin-top: -82px;
   }
 
   .form-main__form {
@@ -573,7 +571,7 @@
 
   .form-main__legend--color {
     padding: 0;
-    padding-top: 67px;
+    padding-top: 149px;
     padding-left: 51px;
   }
 
@@ -591,7 +589,7 @@
     letter-spacing: normal;
     text-align: left;
     padding-left: 50px;
-    padding-top: 70px;
+    padding-top: 61px;
   }
 
   .form-main__header::after {
@@ -611,8 +609,8 @@
     position: relative;
     font-size: 43px;
     padding-left: 30px;
-    padding-top: 87px;
-    padding-bottom: 81px;
+    padding-top: 92px;
+    padding-bottom: 96px;
     z-index: -5;
     text-align: center;
     background-color: #f1f1f1;
@@ -685,7 +683,8 @@
   }
 
   .form-main__list--color {
-    margin-left: 39px;
+    margin-left: 193px;
+    margin-top: -63px;
   }
 
   .form-main__group {
@@ -699,6 +698,7 @@
 
   .form-main__legend--color {
     padding-left: 110px;
+    padding-top: 149px;
   }
 
   .form-main__legend--bio {
@@ -722,5 +722,9 @@
     padding-top: 123px;
     padding-left: 225px;
     padding-right: 250px;
+  }
+
+  .form-main__input--colors {
+    width: auto;
   }
 }
