--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -19,7 +19,7 @@
 .about__header::before {
   content: "";
   position: absolute;
-  top: 16px;
+  top: 12px;
   left: 0;
   width: 320px;
   height: 6px;
@@ -276,10 +276,16 @@
     //background-size: 100px 100px;
   }
 
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .about__wrapper::before {
+      background-image: url("../img/review@2x.jpg");
+    }
+  }
+
   .about__header {
     font-size: 43px;
     padding-left: 46px;
-    padding-top: 81px;
+    padding-top: 76px;
   }
 
   .about__item {
@@ -356,6 +362,16 @@
     left: 50px;
   }
 
+  // @media
+  // (min-resolution: 144dpi),
+  // (min-resolution: 1.5dppx) {
+  //   .about__wrapper::before {
+  //     background-image: url("..img/review@2x.jpg");
+  //     top: -135px;
+  //     left: 50px;
+  //   }
+  // }
+
   .about__review {
     font-size: 53px;
     padding-left: 221px;
@@ -384,7 +400,7 @@
   .about__header {
     font-size: 52px;
     padding-left: 221px;
-    padding-top: 110px;
+    padding-top: 105px;
     margin-bottom: 0;
   }
 }
