--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -51,7 +51,7 @@
 }
 
 .modal__item {
-  font-size: 17px;
+  font-size: 0;
   font-weight: bold;
   font-stretch: normal;
   font-style: normal;
@@ -105,6 +105,7 @@
 }
 
 .modal__choice {
+  font-size: 17px;
   display: flex;
   cursor: pointer;
   width: 78px;
