--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -112,6 +112,7 @@
   .offer__image {
     padding-left: 54px;
     padding-top: 56px;
+    width: 333px;
   }
 
   // .offer__image--tablet {
@@ -204,6 +205,7 @@
     padding-left: 69px;
     margin-top: -169px;
     z-index: -5;
+    width: 525px;
   }
 
   // .offer__image--desktop {
