--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -7,9 +7,9 @@
 }
 
 //Чтобы скрыть меню - раскоментируй
-// .site-list--closed {
-//   display: none;
-// }
+.site-list--closed {
+  display: none;
+}
 
 .site-list__item {
   width: 320px;
