--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -90,35 +90,36 @@
 @media (min-width: 768px) {
   .video__text {
     font-size: 15px;
-    padding-left: 89px;
+    padding-left: 40px;
     padding-top: 32px;
-    width: 536px;
+    width: 586px;
     order: 3;
     margin: 0;
     line-height: 2;
+    padding-right: 34px;
   }
 
   .video::before {
     top: 189px;
-    left: 333px;
+    left: 284px;
   }
 
   .video__button {
     order: 4;
     margin-top: 35px;
-    margin-left: 91px;
-    margin-right: 93px;
+    margin-left: 42px;
+    margin-right: 42px;
   }
 
   .video__heading::before {
     top: 34px;
-    left: 91px;
+    left: 42px;
   }
 
   .video__heading {
     order: 2;
     padding-top: 39px;
-    padding-left: 155px;
+    padding-left: 107px;
     padding-bottom: 0;
     font-size: 20px;
     font-weight: bold;
